force-app/main/default/objects/Donation__c/validationRules/Either_Persona_or_Event_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Persona_or_Event_filled</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( Persona__c ) ) ,NOT( ISBLANK(  Event__c ) ))</errorConditionFormula>
    <errorMessage>Either Persona or Event should be selected</errorMessage>
</ValidationRule>