force-app/main/default/objects/Donation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Donation_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Persona__c</columns>
    <columns>Event__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>